fix contact icons on mobile view

--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -128,7 +128,7 @@
   .iconLinkedin,
   .iconMail,
   .iconTwitter {
-    width: 6rem;
+    width: 4rem;
   }
 }
 
